<resources>
    <string name="app_name">Flippy</string>
    <string name="action_settings">Settings</string>
    <string name="splash_screen_tag_line">closer communities</string>
    <string name="splash_screen_url">flippygh.com</string>
    <string name="title_activity_on_boarding">On Boarding</string>
    <string name="get_started_button">Get Started</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="on_boarding_slide_1">        Flippy lets you quickly share important information in your organization</string>
    <string name="on_boarding_slide_2">        Select your organization\'s Community and subscribe to a Channel, or you could create and manage your own.</string>
    <string name="on_boarding_slide_3">        Receive Notices from the Channels you subscribe to in real-time. You can save, share and set reminders on those that matter most.</string>
    <string name="on_boarding_slide_4">        Ready, set, let\'s go!</string>
    <string name="welcome_text">Welcome to Flippy</string>
    <string name="signin_with_email"> or sign up with your Email</string>
    <string name="login_with_email">login with Email</string>
    <string name="internet_connection_error_dialog_title">An Internet Connection Error Occurred</string>
    <string name="internet_connection_error_dialog_message">        It looks like there was a problem with your Internet connection. Connect and try again.</string>
    <string name="twitter_auth_error_title">A Twitter Authentication Error Occurred</string>
    <string name="twitter_auth_error_message">        Something went wrong while trying to authenticate with Twitter.</string>
    <string name="title_activity_register">Getting Started</string>
    <string name="register_title_few_things">a few things before we go</string>
    <string name="register_title">Register with email</string>
    <string name="register_email_phone_number_placeholder">user email</string>
    <string name="register_first_name_placeholder">first name</string>
    <string name="register_last_name_placeholder">last name</string>
    <string name="register_password_placeholder">password</string>
    <string name="register_terms">I have read and agreed with the  terms and conditions of Flippy</string>
    <string name="register_sign_in_text">I already have an account</string>
    <string name="register_next">next</string>
    <string name="registration_error_email">A valid email or phone number is required</string>
    <string name="registration_error_first_name">Your first name is required</string>
    <string name="registration_error_last_name">Your last name is required</string>
    <string name="registration_error_password">A password is required</string>
    <string name="registration_error_checkbox">You must agree to the terms first</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="start">get started</string>
    <string name="new_user">I\'m a new user</string>
    <string name="title_activity_select_community">Getting Started</string>
    <string name="last_step">the final step</string>
    <string name="select_community">Select Your Community</string>
    <string name="community_key">Were you given a community key? Enter it here</string>
    <string name="community_key_hint">private community key</string>
    <string name="community_key_get_started">get started with key</string>
    <string name="community_key_menu">key</string>
    <string name="title_activity_community_center">Community Center</string>
    <string name="community_center_old_notice">load old notices</string>
    <string name="fragment_notice_offline">You are currently in the offline mode</string>
    <string name="default_channel_name">Channel name</string>
    <string name="default_channel_status">Default</string>
    <string name="default_channel_number">10 creatorFullName</string>
    <string name="manage_channel">Manage Channel</string>
    <string name="add_channel">Add A Channel</string>
    <string name="subscription_state_true">Subscribe</string>
    <string name="subscription_state_false">Unsubscribe</string>
    <string name="channel_empty">Currently no channel</string>
    <string name="app_id">305971362902085</string>
    <string name="facebook_error_tittle">Facebook sign in error</string>
    <string name="facebook_error_message">Error while getting profile information, try later</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="drawer_item_channel">My Channels</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_account">Profile</string>
    <string name="drawer_item_notice">Notices</string>
    <string name="drawer_item_community">My Community</string>
    <string name="drawer_item_favourite">Favourites</string>
    <string name="menu_share">Share with friends</string>
    <string name="menu_notice">Create notice</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_send_feedback">Send feedback</string>
    <string name="menu_help">Help</string>
    <string name="title_activity_account_profile">Account Profile</string>
    <string name="user_tap_to_edit">tap to edit</string>
    <string name="dummy_user_name">Flippy User Name</string>
    <string name="dummy_user_email">info@flippy.co</string>
    <string name="dummy_user_number">(+233) 0000000</string>
    <string name="profile_list_channels">My Channels</string>
    <string name="profile_list_channels_footer">we\'ve got your back, cheers</string>
    <string name="profile_edit">Edit profile</string>
    <string name="profile_upload">Upload photo</string>
    <string name="flippy_email">info@flippy.co</string>
    <string name="flippy_email_subject">Flippy feedback</string>
    <string name="flippy_email_body">Flippy is one of the best works I\'ve ever seen</string>
    <string name="notice_title">Notice Title</string>
    <string name="notice_subtitle">from channel @ time</string>
    <string name="exit_title">Exiting Flippy</string>
    <string name="exit_message">Are you sure you want to exit Flippy ?</string>
    <string name="exit_positive">Yes, continue</string>
    <string name="exit_negative">No, not now</string>
    <string name="choose_channel_list_dialog_title">Choose a channel</string>
    <string name="notice_detail">View details</string>
    <string name="notice_reminder">Set reminder</string>
    <string name="notice_favourite">Favourite notice</string>
    <string name="notice_share">Share notice</string>
    <string name="notice_remove">Remove from board</string>
    <string name="community_context_view_detail">Channel details</string>
    <string name="community_context_view_members">Channel creatorFullName</string>
    <string name="community_context_subscribe">Subscribe</string>
    <string name="community_context_un_subscribe">Unsubscribe</string>
    <string name="settings_title">Settings title</string>
    <string name="settings_subtitle">Settings subtitle</string>
    <string name="settings_help">Help</string>
    <string name="settings_help_subtitle">get help information</string>
    <string name="settings_profile">Profile</string>
    <string name="settings_profile_subtitle">edit your account details</string>
    <string name="settings_legal">Legal</string>
    <string name="settings_legal_subtitle">read the fine print</string>
    <string name="settings_accessibility">Flippy Settings</string>
    <string name="settings_accessibility_subtitle">make flippy better for you</string>
    <string name="settings_about">About Flippy</string>
    <string name="settings_about_subtitle">more about flippy</string>
    <string name="settings_account">Log Out of Flippy</string>
    <string name="settings_account_subtitle">you can log in again</string>
    <string name="settings_version">Version</string>
    <string name="settings_version_subtitle">version information</string>
    <string name="channel_members_activity_title">Channel creator full name</string>
    <string name="title_activity_notice_detail">Notice Detail</string>
    <string name="notice_menu_share">Share</string>
    <string name="notice_menu_duplicate">Re-flip notice</string>
    <string name="notice_menu_add_alarm">Set as reminder</string>
    <string name="notice_detail_publish">publish notice</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="menu_profile_editing">Save</string>
    <string name="edit_profile_username">Full name</string>
    <string name="edit_profile_first_name">First name</string>
    <string name="edit_profile_last_name">Last name</string>
    <string name="edit_profile_number">Phone number</string>
    <string name="edit_profile_email">Email address</string>
    <string name="edit_profile_date">Date of birth (YYY-MM-DD)</string>
    <string name="edit_profile_message">we promise to keep your information safe and secured on flippy, cheers!</string>
    <string name="title_activity_create_channel">Create Channel</string>
    <string name="channel_create_done">create channel</string>
    <string name="channel_one_liner">Channel description</string>
    <string name="channel_channel_name">channel name</string>
    <string name="legal_intellectual_title">Intellectual Property</string>
    <string name="legal_privacy_title">Privacy </string>
    <string name="legal_privacy_message">            Your privacy is very important to us. We desire all our users to respect the rights of other people with regards to the use of Flippy.</string>
    <string name="legal_intellectual_message">        Flippy respects the intellectual property rights of others and is committed to helping third parties protect their rights. Our Statement of Rights and Responsibilities prohibits users from posting content that violates another party\'s intellectual property rights.</string>
    <string name="legal_content_title">Content and Information</string>
    <string name="legal_content_message">            You own all of the content and information you post on Flippy, and the information that you post can be shared by other users who has subscribed to your channel. This information can be reshared by other parties who see this information</string>
    <string name="legal_safety_title">Safety and Security</string>
    <string name="legal_safety_message">        We do our best to keep Flippy safe, but we cannot guarantee it. We need your help to keep Flippy safe, which includes the following commitments by you:</string>
    <string name="security_one">        You will not post unauthorized commercial communications (such as spam) on Flippy.</string>
    <string name="security_two">       You will not engage in unlawful multi-level marketing, such as a pyramid scheme, on Flippy.</string>
    <string name="security_three">        You will not upload viruses or other malicious code.</string>
    <string name="security_four">        You will not solicit login information or access an account belonging to someone else.</string>
    <string name="security_conclusion">       Flippy reserves the rights to deactivate a user\'s\’ account without prior notice if a user is suspected of or is indulging in any activity which is illegal or violates the right or other users or the policy of Flippy.</string>
    <string name="activity_user_account_logout">LOG ME OUT</string>
    <string name="activity_user_account_logout_title">LOGGING OUT YOUR ACCOUNT WILL:</string>
    <string name="activity_user_account_logout_info_one">Remove your account settings</string>
    <string name="activity_user_account_logout_info_two">Remove all data saved on your device</string>
    <string name="activity_user_account_logout_info_three">Stop Flippy notifications</string>
    <string name="activity_user_account_logout_info_four">Require login next time you come</string>
</resources>