<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jojo.flippy.core.CommunityChannelActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_group"
        android:orderInCategory="500"
        android:title="@string/menu_help"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_feedback"
        android:icon="@android:drawable/ic_menu_set_as"
        android:orderInCategory="400"
        android:title="@string/menu_send_feedback"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:title="@string/menu_notice"
        android:icon="@drawable/ic_action_new"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="300"
        android:title="@string/menu_share"
        app:showAsAction="always" />
</menu>
