<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jojo.flippy.profile.UserAccountLogout">


    <TextView
        android:id="@+id/textViewLogOutTile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/activity_user_account_logout_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/flippy_orange"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_twenty"
        android:paddingTop="@dimen/margin_ten"
        android:paddingBottom="@dimen/margin_ten"
        android:paddingLeft="@dimen/margin_twenty"
        android:layout_below="@+id/textViewLogOutTile"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/activity_user_account_logout_info_one"
            android:paddingTop="@dimen/margin_five"
            android:id="@+id/textViewLogOutInfoOne" />

        <TextView
            android:paddingTop="@dimen/margin_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/activity_user_account_logout_info_two"
            android:id="@+id/textViewLogOutInfoTwo" />

        <TextView
            android:paddingTop="@dimen/margin_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/activity_user_account_logout_info_three"
            android:id="@+id/textViewLogOutInfoThree" />

        <TextView
            android:paddingTop="@dimen/margin_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/activity_user_account_logout_info_four"
            android:id="@+id/textViewLogOutInfoFour" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/flippy_button_default"
        android:textColor="@color/flippy_white"
        android:textStyle="bold"
        android:text="@string/activity_user_account_logout"
        android:id="@+id/buttonLogOut"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
