<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jojo.flippy.core.SettingsLegalActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLegalIntellectualTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legal_intellectual_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:id="@+id/viewIntellectual"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_one"
                android:layout_below="@+id/textViewLegalIntellectualTitle"
                android:layout_margin="@dimen/margin_five"
                android:background="@color/flippy_orange" />

            <TextView
                android:id="@+id/textViewLegalIntellectualMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/viewIntellectual"
                android:layout_marginTop="@dimen/margin_five"
                android:gravity="left"
                android:text="@string/legal_intellectual_message"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewLegalPrivacyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_ten"
                android:text="@string/legal_privacy_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:id="@+id/viewPrivacy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_one"
                android:layout_below="@+id/textViewLegalIntellectualTitle"
                android:layout_margin="@dimen/margin_five"
                android:background="@color/flippy_orange" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/viewPrivacy"
                android:layout_marginTop="@dimen/margin_five"
                android:gravity="left"
                android:text="@string/legal_privacy_message"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewLegalContentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_ten"
                android:text="@string/legal_content_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:id="@+id/viewContent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_one"
                android:layout_below="@+id/textViewLegalIntellectualTitle"
                android:layout_margin="@dimen/margin_five"
                android:background="@color/flippy_orange" />

            <TextView
                android:id="@+id/textViewContentMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/viewContent"
                android:layout_marginTop="@dimen/margin_five"
                android:gravity="left"
                android:text="@string/legal_content_message"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewLegalSecurityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_ten"
                android:text="@string/legal_safety_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:id="@+id/viewSecurity"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_one"
                android:layout_below="@+id/textViewLegalIntellectualTitle"
                android:layout_margin="@dimen/margin_five"
                android:background="@color/flippy_orange" />

            <TextView
                android:id="@+id/textViewSecurityMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/viewContent"
                android:layout_marginTop="@dimen/margin_five"
                android:gravity="left"
                android:text="@string/legal_safety_message"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/margin_twenty"
                android:paddingTop="@dimen/margin_five">

                <TextView
                    android:id="@+id/textViewSecurityOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/viewContent"
                    android:layout_marginTop="@dimen/margin_five"
                    android:gravity="left"
                    android:text="@string/security_one"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/textViewSecurityTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/viewContent"
                    android:layout_marginTop="@dimen/margin_two"
                    android:gravity="left"
                    android:text="@string/security_two"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/textViewSecurityThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/viewContent"
                    android:layout_marginTop="@dimen/margin_two"
                    android:gravity="left"
                    android:text="@string/security_three"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/textViewSecurityFour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/viewContent"
                    android:layout_marginTop="@dimen/margin_two"
                    android:gravity="left"
                    android:text="@string/security_four"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewSecurityConclusion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/viewContent"
                android:layout_marginTop="@dimen/margin_five"
                android:gravity="left"
                android:text="@string/security_conclusion"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
