<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/splash_bg"
    android:padding="@dimen/margin_fifty"
    tools:context="com.jojo.flippy.app.SplashScreenActivity">

    <ImageView
        android:id="@+id/imageViewFlippyLogoWhite"
        android:layout_width="@dimen/margin_two_hundred"
        android:layout_height="@dimen/margin_two_hundred"
        android:layout_gravity="center|top"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/flippy_logo_white" />

    <TextView
        android:id="@+id/textViewSplashScreenTagLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/splash_screen_tag_line"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/textViewSplashScreenURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="130dp"
        android:text="@string/splash_screen_url"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff"
        android:textStyle="italic" />
</FrameLayout>
